--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,25 @@
-.header  {
+/* select the whole document */
+*{
+  box-sizing: 0;
+  margin: 0;
+  padding: 0;
+}
+
+/* select .header and ul */
+.header, ul {
+  display: flex;
+}
+
+
+.header {
   font-family: monospace;
   background: papayawhip;
+  /* flexbox  properties */
+  align-items: center;
+  justify-content: space-between;
+  /*  */
+  /* add padding  */
+  padding: 10px;
 }
 
 .logo {
@@ -14,6 +33,7 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  gap: 10px;
 }
 
 a {
@@ -23,3 +43,4 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
