--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -11,12 +11,34 @@ body {
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
-  box-shadow: 0 0 8px rgba(0,0,0,.1);
+  box-shadow: 0 0 8px rgba(0, 0, 0, .1);
+
+  /* add padding  */
+  padding: 0 8px;
+
+  /* flexbox properties */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
 }
+
+.links {
+  padding-left: 0;
+}
+
+/* select: class "header-left", ul, and class "header-right" */
+.header-left,
+ul,
+.header-right {
+  display: flex;
+  gap: 16px;
+}
+
 
 .profile-image {
   background: rebeccapurple;
-  box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
+  box-shadow: inset 2px 2px 4px rgba(0, 0, 0, .5);
   border-radius: 50%;
   width: 48px;
   height: 48px;
@@ -45,4 +67,9 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+
+.notifications {
+  margin: 8px 0;
 }
