--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,13 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+  /* add padding */
+  padding: 20px;
+
+  /* flexbox properties */
+  display: flex;
+  gap: 10px;
 }
 
 .icon {
@@ -34,6 +41,27 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+/* class: container */
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+/* header container */
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* class: header */
+.header {
+  font-weight: bold;
+  font-size: 20px;
+}
+
 
 .close-button {
   background: #eee;
@@ -64,3 +92,24 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+
+/* 
+  ### Self Check
+
+  - The blue icon is aligned to the left. +++
+
+  - There is equal space on either side of the icon 
+    (the gaps between the icon and the edge of the card, 
+      and the icon and the text, are the same).
+
+  - There is padding around the edge of the modal. 
+  
+  - The header, text, and buttons are aligned with each other. +++
+  
+  - The header is bold and a slightly larger text-size than the text. +++
+  
+  - The close button is vertically aligned with the header,
+      and aligned in the top-right of the card. +++
+
+*/
