--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,29 +1,84 @@
+/* global */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+}
+
+
+li {
+  margin: 0 0 16px;
+}
+
+/* body */
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+
+  /* flexbox properties */
+  display: flex;
+  flex-direction: column;
+  gap: 0;
 }
 
+/* class: header */
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  line-height: 72px;
+  padding-left: 16px;
 }
 
-.footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
+/* class: content */
+.content {
+  flex: 1;
+  display: flex;
+  gap: 32px;
+
 }
 
+/* class: sidebar */
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  padding: 16px;
+  flex-shrink: 0;
 }
 
+.sidebar a  {
+  color: #fff;
+  font-size: 24px;
+}
+
+/* class: card-container */
+.card-container {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 32px;
+  margin: 32px;
+}
+
+/* class: card */
 .card {
+  width: 300px;
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
   border-radius: 4px;
+  padding: 8px;
+}
+
+/* class: footer */
+.footer {
+  height: 72px;
+  background: #eee;
+  color: darkmagenta;
+  text-align: center;
+  line-height: 72px;
 }
